# KeyRepo

./: CMakeLists.txt  README.md
include/: Executor.h  KernelEmulation.h  KeyIOInterfaces.h  KeyRepoHeaders.h  KeyRepoSyscallWrapper.h  Lexer.h  OpenSSLHandler.h  Parser.h  Statement.h  SyntaxAnalyser.h  TerminalEmulation.h  TimeCalc.h  Token.h
setup/: custom_setup.sh  custom_update.sh
setup/changed_files_in_kernel/: Makefile
setup/changed_files_in_kernel/arch/x86/entry/syscalls/: syscall_64.tbl
setup/changed_files_in_kernel/include/linux/: syscalls.h
setup/changed_files_in_kernel/krepo/: KernelEmulation.h  Makefile  krepo.c
source/: CMakeLists.txt  Executor.cpp  KernelEmulation.c  KernelEmulation.cpp  KeyIOInterfaces.cpp  KeyRepoHeaders.h  KeyRepoSyscallWrapper.c  Lexer.cpp  OpenSSLHandler.cpp  Parser.cpp  Statement.cpp  SyntaxAnalyser.cpp  TimeCalc.cpp  main.cpp
tests/: CMakeLists.txt  IntegrationTests.cpp
tests/syscall_tests/: a.out  demo_full.c  get_key_num_test.c  key.txt  partition_reader.cpp  read.c  test.c  test_create_get.c  write_read.c
