cmake_minimum_required(VERSION 3.16)
project(KeyRepo)

set(CMAKE_CXX_STANDARD 20)

if(APPLE)
    set(CMAKE_SHARED_LINKER_FLAGS "-L/usr/local/opt/openssl@1.1/lib -I/usr/local/opt/openssl@1.1/include -lcrypto")
    set(CMAKE_CXX_STANDARD_LIBRARIES "-L/usr/local/opt/openssl@1.1/lib -I/usr/local/opt/openssl@1.1/include -lcrypto")
else()
    set(CMAKE_SHARED_LINKER_FLAGS "-lcrypto -lstdc++fs")
    set(CMAKE_CXX_STANDARD_LIBRARIES "-lstdc++fs -lcrypto")
endif()
#set(CMAKE_CXX_FLAGS "-lcrypto")
#set(CMAKE_C_FLAGS "-lcrypto")
#message(WARNING ${CMAKE_LINKER)
add_subdirectory(source)
add_subdirectory(tests)
#add_executable(KeyRepo main.cpp)